--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:game": "node dist/game/server/server.mjs",
-    "build:github": "ng build --configuration production --output-path docs --base-href https://sadegh-salari.github.io/"
+    "build:github": "ng build --configuration production --output-path docs --base-href https://sadegh-salari.github.io/",
+    "deploy": "npx angular-cli-ghpages --dir=docs"
   },
   "private": true,
   "dependencies": {
